--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 .margin {
   margin: 100px;
 }
@@ -10,4 +15,15 @@
 .table td {
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+#navbar {
+  background-color: #253A46;
+  padding: 20px;
+  font-size: 20px;
+}
+
+#navbar a{
+  color: #FFF;
+  padding-right: 50px;
 }
